--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
+		"@types/react": "^18.3.6",
+		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -20,5 +22,11 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@radix-ui/themes": "^3.1.3",
+		"@tremor/react": "^3.18.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	}
 }
