--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/themes": "^3.1.3",
 		"@tremor/react": "^3.18.2",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"lucide-react": "^0.336.0"
 	}
 }
