--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production && npm run copy-to-vault",
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"copy-to-vault": "cp main.js styles.css manifest.json 'Demo Vault/.obsidian/plugins/obsidian-calendar-pro-plugin/'"
 	},
 	"keywords": [],
 	"author": "",
