--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
 		"allowSyntheticDefaultImports": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7"]
 	},
-	"include": ["**/*.ts", "main.tsx"]
+	"include": ["**/*.ts", "**/*.tsx"]
 }
