--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-calendar-pro-plugin",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Calendar Pro is a plugin for Obsidian that provides a view of calendar and create daily/weekly/monthly/quarterly/yearly notes.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,8 +9,8 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"copy-to-vault": "cp -r dist/* 'Demo Vault/.obsidian/plugins/obsidian-calendar-pro-plugin/'"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": ["obsidian", "obsidian plugin", "calendar"],
+	"author": "RayZhao98",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
