--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "Calendar-Pro",
+	"id": "calendar-pro",
 	"name": "Calendar Pro",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"minAppVersion": "0.15.0",
 	"description": "Calendar Pro is a plugin for Obsidian that provides a view of calendar and create daily/weekly/monthly/quarterly/yearly notes.",
-	"author": "RayZhao98",
+	"author": "Ray Zhao",
 	"authorUrl": "https://github.com/RayZhao1998",
 	"fundingUrl": {
 		"Buy Me a Coffee": "https://buymeacoffee.com/52VQAdxhU"
