--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "calendar-pro",
 	"name": "Calendar Pro",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"minAppVersion": "0.15.0",
-	"description": "Calendar Pro is a plugin for Obsidian that provides a view of calendar and create daily/weekly/monthly/quarterly/yearly notes.",
+	"description": "Provides a view of calendar and create daily/weekly/monthly/quarterly/yearly notes.",
 	"author": "Ray Zhao",
 	"authorUrl": "https://github.com/RayZhao1998",
 	"fundingUrl": {
